[package]
authors = ["Daniel Brotsky <dev@brotsky.com>"]
description = "Windows native credential store for keyring"
homepage = "https://github.com/open-source-cooperative/keyring-rs/wiki/Keyring"
keywords = ["windows", "credential-manager", "credential-store", "keyring"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-source-cooperative/windows-native-keyring-store.git"
rust-version = "1.85"
exclude = [".github/"]
readme = "README.md"
name = "windows-native-keyring-store"
version = "0.2.0"
edition = "2024"

[[example]]
name = "example"

[dependencies]
keyring-core = { version = "0.7" }
byteorder = "1.2"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
zeroize = "1.8.1"

[dev-dependencies]
fastrand = "2.3"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
